--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "14.17.6",
     "npm": "6.14.15"
   },
+  "type": "module",
   "scripts": {
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
@@ -14,12 +15,16 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
+    "apollo-server-express": "^3.3.0",
     "compression": "1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "firebase-admin": "^9.12.0",
+    "graphql": "^15.6.0",
     "stripe": "6.28.0"
   },
   "devDependencies": {
+    "@types/stripe": "^8.0.417",
     "concurrently": "^4.0.1",
     "nodemon": "^1.19.1"
   }
