--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "node": "14.17.6",
     "npm": "6.14.15"
   },
-  "type": "module",
   "scripts": {
     "client": "cd client && npm run start",
     "server": "nodemon server.js",
@@ -16,7 +15,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.3.0",
-    "compression": "1.7.4",
+    "compression": "^1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "firebase-admin": "^9.12.0",
