--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.7.4",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
+    "express-sslify": "^1.2.0",
     "firebase-admin": "^9.12.0",
     "graphql": "^15.6.0",
     "stripe": "6.28.0"
