--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "apollo-server-express": "^3.3.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "express-sslify": "^1.2.0",
