--- a/client/package.json
+++ b/client/package.json
@@ -61,5 +61,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme": "^3.11.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
